[package]
name = "einat"
version = "0.1.4"
edition = "2021"
license = "GPL-2.0"
authors = ["Huang-Huang Bao <i@eh5.me>"]
repository = "https://github.com/EHfive/einat-ebpf"
rust-version = "1.80"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[features]
default = ["aya", "libbpf-skel", "pkg-config"]
# Enable IPv6 NAPT
ipv6 = []
# Enable Aya BPF loader, requires Rust>=1.80.0
aya = [
    # the dep:aya is also used for determine kernel version so it's already included
]
# Enable libbpf BPF loader
libbpf = ["dep:libbpf-rs", "dep:libbpf-sys"]
# Enable libbpf skeleton-wrapped BPF loader, requires unpublish self_cell for now
libbpf-skel = [
    "dep:libbpf-rs",
    "dep:libbpf-sys",
    "dep:libbpf-cargo",
    "dep:self_cell",
]
# Bindgen for libbpf headers, required on 32-bit platforms
bindgen = ["libbpf-sys?/bindgen"]
# Link against static `libelf` and `zlib` for libbpf loader.
static = ["libbpf-sys?/static"]
#
# libbpf is vendrored and static in any case.
# Note currently there is a bug in libbpf-sys that prevent static linking if
# system libbpf is present, delete system libbpf or /path/to/pkgconfig/libbpf.pc
# to work around it. See https://github.com/libbpf/libbpf-sys/issues/112

[dependencies]
anyhow = "1.0.93"
async-stream = "0.3.6"
aya = "0.13.1"
aya-obj = "0.2.1"
bitflags = { version = "2.6.0", features = ["bytemuck"] }
bytemuck = { version = "1.20.0", features = ["derive"] }
cfg-if = "1.0.0"
enum_dispatch = "0.3.13"
fundu = "2.0.1"
futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }
ipnet = { version = "2.10.1", features = ["serde"] }
lexopt = "0.3.0"
libbpf-rs = { version = "0.24.8", optional = true }
libbpf-sys = { version = "1.5.0", optional = true }
libc = "0.2.164"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.19.0"
netlink-sys = "0.8.6"
prefix-trie = "0.5.1"
rtnetlink = "0.14.1"
self_cell = { version = "1.0.4", optional = true }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt", "signal", "sync"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tracing = { version = "0.1.40", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }

[target.'cfg(not(target_arch="x86_64"))'.dependencies]
libbpf-sys = { version = "1.5.0", features = ["bindgen"], optional = true }

[build-dependencies]
libbpf-cargo = { version = "0.24.8", optional = true }
pkg-config = { version = "0.3.31", optional = true }
