[package]
name = "einat"
version = "0.1.10"
edition = "2021"
license = "GPL-2.0"
authors = ["Huang-Huang Bao <i@eh5.me>"]
repository = "https://github.com/EHfive/einat-ebpf"
rust-version = "1.82"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[features]
default = ["aya", "pkg-config"]
# Enable IPv6 NAPT
ipv6 = []
# Enable Aya BPF loader
aya = [
    # the dep:aya is also used for determining kernel version so it's already included
    "dep:aya-obj",
]
# Enable libbpf BPF loader
libbpf = ["dep:libbpf-rs", "dep:libbpf-sys"]
# Enable libbpf skeleton-wrapped BPF loader
libbpf-skel = [
    "dep:libbpf-rs",
    "dep:libbpf-sys",
    "dep:libbpf-cargo",
    "dep:self_cell",
]
# Bindgen for libbpf headers, required on 32-bit platforms
bindgen = ["libbpf-sys?/bindgen"]
# Link against static `libelf` and `zlib` for libbpf loader.
static = ["libbpf-sys?/static"]
#
# libbpf is vendored and static in any case.
#

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
aya = "0.14.0"
aya-obj = { version = "0.3.0", optional = true }
bitflags = { version = "2.13.0", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
cfg-if = "1.0.4"
enum_dispatch = "0.3.13"
fundu = "2.0.1"
futures-util = { version = "0.3.32", default-features = false, features = [
    "std",
] }
ipnet = { version = "2.12.0", features = ["serde"] }
lexopt = "0.3.2"
libbpf-rs = { version = "0.26.2", optional = true }
libbpf-sys = { version = "1.7.0", optional = true }
libc = "0.2.186"
netlink-packet-core = "0.8.1"
netlink-packet-route = "0.30.0"
netlink-proto = "0.12.0"
netlink-sys = "0.8.8"
prefix-trie = "0.9.2"
rtnetlink = "0.21.0"
self_cell = { version = "1.2.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = [
    "macros",
    "rt",
    "signal",
    "sync",
    "time",
] }
toml = { version = "1.1.2", default-features = false, features = [
    "parse",
    "serde",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
] }

[target.'cfg(not(target_arch="x86_64"))'.dependencies]
libbpf-sys = { version = "1.7.0", features = ["bindgen"], optional = true }

[build-dependencies]
libbpf-cargo = { version = "0.26.2", optional = true }
pkg-config = { version = "0.3.33", optional = true }
